Fix bug hero wrap & logo

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -63,7 +63,7 @@ a {
 /* Header */
 .hero-wrap {
     background: #e6f0ff;
-    height: 100vh;
+    height: calc(100vh - 90px);
     position: relative;
     display: flex;
     flex-direction: column;
